--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ http {
   server {
     listen 80;
 
+    # Main proxying route
     location / {
       proxy_pass http://n8n_cluster;
       proxy_http_version 1.1;
@@ -15,6 +16,12 @@ http {
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
+    }
+
+    # Monitoring and health status route
+    location /status {
+      stub_status;
+      allow all;
     }
   }
 }
