--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,10 @@ events {}
 
 http {
   upstream n8n_cluster {
-    server n8n:5678;
+    ip_hash;
+    server n8n-postgresql-high-availability-system-n8n-1:5678;
+    server n8n-postgresql-high-availability-system-n8n-2:5678;
+    server n8n-postgresql-high-availability-system-n8n-3:5678;
   }
 
   server {
@@ -15,6 +18,22 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_cache_bypass $http_upgrade;
+    }
+
+    # Route for webhooks (same back-end)
+    location /webhook/ {
+      proxy_pass http://n8n_cluster;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_cache_bypass $http_upgrade;
     }
 
